@@ -173,6 +173,7 @@ struct hash_foreach_arg {
     VALUE hash;
     rb_foreach_func *func;
     VALUE arg;
+    int iter_lev;
 };
 
 static int
@@ -201,9 +202,12 @@ hash_foreach_iter(st_data_t key, st_data_t value, st_data_t argp, int error)
 }
 
 static VALUE
-hash_foreach_ensure(VALUE hash)
+hash_foreach_ensure(VALUE arg)
 {
-    if (--RHASH_ITER_LEV(hash) == 0) {
+    struct hash_foreach_arg *argp = (struct hash_foreach_arg *)arg;
+    VALUE hash = argp->hash;
+
+    if ((RHASH_ITER_LEV(hash) = argp->iter_lev) == 0) {
 	if (FL_TEST(hash, HASH_DELETED)) {
 	    st_cleanup_safe(RHASH(hash)->ntbl, (st_data_t)Qundef);
 	    FL_UNSET(hash, HASH_DELETED);
@@ -229,11 +233,11 @@ rb_hash_foreach(VALUE hash, int (*func)(ANYARGS), VALUE farg)
 
     if (!RHASH(hash)->ntbl)
         return;
-    RHASH_ITER_LEV(hash)++;
     arg.hash = hash;
     arg.func = (rb_foreach_func *)func;
     arg.arg  = farg;
-    rb_ensure(hash_foreach_call, (VALUE)&arg, hash_foreach_ensure, hash);
+    arg.iter_lev = RHASH_ITER_LEV(hash)++;
+    rb_ensure(hash_foreach_call, (VALUE)&arg, hash_foreach_ensure, (VALUE)&arg);
 }
 
 static VALUE
